force-app/main/default/objects/AWS_Attachment__c/AWS_Attachment__c.object-meta.xml
<CustomObject>
    <label>AWS Attachment</label>
    <nameField>
        <displayFormat>AWSS3-{000000}</displayFormat>
        <label>AWS Attachments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>