force-app/main/default/objects/AWS_Attachment__c/fields/FileUrl__c.field-meta.xml
<CustomField>
    <fullName>FileUrl__c</fullName>
    <inlineHelpText>The AWS Url of the file</inlineHelpText>
    <label>File Url</label>
    <type>Url</type>
</CustomField>