force-app/main/default/objects/AWS_Attachment__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <inlineHelpText>The Id for the parent record under which the file is uploaded.</inlineHelpText>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>