force-app/main/default/objects/AWS_Attachment__c/fields/ParentRecord__c.field-meta.xml
<CustomField>
    <fullName>ParentRecord__c</fullName>
    <description>This field will take you to the original record under which the file was uploaded.</description>
    <formula>HYPERLINK(&quot;/&quot;+ ParentId__c , &apos;Parent Record&apos; , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will take you to the original record under which the file was uploaded.</inlineHelpText>
    <label>Parent Record</label>
    <type>Text</type>
</CustomField>