force-app/main/default/objects/AWS_Attachment__c/fields/VersionId__c.field-meta.xml
<CustomField>
    <fullName>VersionId__c</fullName>
    <inlineHelpText>This field contains the Id of the file version</inlineHelpText>
    <label>Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>